// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormComboBoxLoadableValue rendering tests value defined - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
    data-testid="recommendedModel"
  >
    <label
      class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
      data-error="false"
      data-slot="form-label"
      for="_r_1_-form-item"
    >
      Modell
      <span
        class="text-destructive"
      >
        *
      </span>
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <button
        aria-describedby="_r_1_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
        data-slot="popover-trigger"
        data-testid="combobox-trigger"
        id="_r_1_-form-item"
        role="combobox"
        type="button"
      >
        <span
          class="truncate"
        >
          Claude
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`FormComboBoxLoadableValue rendering tests value undefined - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
    data-testid="recommendedModel"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
      data-error="false"
      data-slot="form-label"
      for="_r_0_-form-item"
    >
      Modell
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <button
        aria-describedby="_r_0_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
        data-slot="popover-trigger"
        data-testid="combobox-trigger"
        id="_r_0_-form-item"
        role="combobox"
        type="button"
      >
        <span
          class="truncate text-muted-foreground"
        >
          Modell auswählen oder erstellen
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;
